# GoogleTestCopy

./: .gitignore  CMakeLists.txt
include/: Calculator.h  Rectangle.h
src/: Calculator.cpp  Rectangle.cpp  main.cpp
test/: CMakeLists.txt  ExampleTests.cpp  RectangleTests.cpp
